--- a/launcher/makefile
+++ b/launcher/makefile
@@ -6,7 +6,7 @@ BUILD_DIR = build
 SRC_DIR = .
 OUTPUT_DIR = ..
 
-all: $(OUTPUT_DIR)/launcher.exe $(OUTPUT_DIR)/uninstall.exe
+all: $(OUTPUT_DIR)/launcher.exe $(OUTPUT_DIR)/uninstall.exe $(OUTPUT_DIR)/launcher_static.exe
 
 $(BUILD_DIR)/resources.o: $(SRC_DIR)/spotifylinker_resources.rc
 	if not exist $(BUILD_DIR) mkdir $(BUILD_DIR)
@@ -17,6 +17,9 @@ $(OUTPUT_DIR)/launcher.exe: $(BUILD_DIR)/resources.o $(SRC_DIR)/launcher.cpp
 
 $(OUTPUT_DIR)/uninstall.exe: $(BUILD_DIR)/resources.o $(SRC_DIR)/uninstall.c
 	$(CXX) $(CXXFLAGS) $(SRC_DIR)/uninstall.c $(BUILD_DIR)/resources.o -o $(OUTPUT_DIR)/uninstall.exe $(LDFLAGS)
+
+$(OUTPUT_DIR)/launcher_static.exe: $(BUILD_DIR)/resources.o $(SRC_DIR)/launcher.cpp
+	$(CXX) $(CXXFLAGS) -static $(SRC_DIR)/launcher.cpp $(BUILD_DIR)/resources.o -o $(OUTPUT_DIR)/launcher_static.exe $(LDFLAGS)
 
 clean:
 	if exist $(BUILD_DIR) rmdir /s /q $(BUILD_DIR)
